# minect

./: .gitignore  Cargo.toml  README.md  build.rs  workspace.code-workspace
.github/workflows/: ci.yml
.github/workflows/setup-minecraft-for-ci/: pack.mcmeta
.github/workflows/setup-minecraft-for-ci/data/minecraft/tags/functions/: load.json
.github/workflows/setup-minecraft-for-ci/data/setup_minecraft_for_ci/functions/: load.mcfunction
src/: _3d.rs  command.rs  connect.rs  geometry3.rs  io.rs  json.rs  lib.rs  log.rs  log_observer.rs  logfile_watcher.rs  macros.rs  on_drop.rs  placement.rs  utils.rs
src/command/: tests.rs
src/datapack/: pack.mcmeta
src/datapack/data/minecraft/tags/functions/: load.json  tick.json
src/datapack/data/minect/functions/: disconnect.mcfunction  disconnect_self.mcfunction  enable_logging.mcfunction  install.mcfunction  load.mcfunction  prepare_logged_block.mcfunction  pulse_redstone.mcfunction  reload.mcfunction  reset_logging.mcfunction  tick.mcfunction  uninstall.mcfunction  uninstall_completely.mcfunction
src/datapack/data/minect/functions/connect/: choose_chunk.mcfunction
src/datapack/data/minect_internal/functions/: clean_up.mcfunction  install.mcfunction  load.mcfunction  pulse_redstone.mcfunction  reload.mcfunction  tick.mcfunction  update.mcfunction  v1_install.mcfunction  v1_uninstall.mcfunction  v2_install.mcfunction  v2_migrate.mcfunction  v2_uninstall.mcfunction  v3_install.mcfunction  v3_uninstall.mcfunction
src/datapack/data/minect_internal/functions/connect/: align_to_chunk.mcfunction  remove_connector.mcfunction
src/datapack/data/minect_internal/functions/connection/-connection_id-/connect/: cancel.mcfunction  cancel_cleanup.mcfunction  choose_chunk.mcfunction  choose_chunk_unchecked.mcfunction  confirm_chunk.mcfunction  prompt.mcfunction  prompt_unchecked.mcfunction
src/datapack/data/minect_internal/functions/connection/-connection_id-/disconnect/: prompt.mcfunction
src/datapack/data/minect_internal/functions/cursor/: clean_up.mcfunction  initialize.mcfunction  move.mcfunction  move_and_place_ahead.mcfunction  place.mcfunction  place_ahead.mcfunction  try_place_facing_east.mcfunction  try_place_facing_north.mcfunction  try_place_facing_south.mcfunction  try_place_facing_west.mcfunction  try_place_facing_z.mcfunction
src/datapack/data/minect_internal/tags/blocks/: command_blocks.json
src/datapack/data/minect_internal/tags/functions/connect/: choose_chunk.json  prompt.json
src/datapack/data/minect_internal/tags/functions/disconnect/: prompt.json
src/log/: observer.rs
src/structure/: mod.rs  nbt.rs  placement.rs
tests/: integration_test.rs
tests/utils/: mod.rs
