[package]
name = "minect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minect"

[dependencies]
encoding_rs = "0.8"
fs3 = "0.5"
futures = "0.3"
hematite-nbt = "0.5"
indexmap = { version = "1", features = ["serde"] }
log = "0.4"
notify = "5"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
walkdir = "2"

[dev-dependencies]
serial_test = "0.10"
simplelog = "0.12"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
walkdir = "2"
