[package]
authors = ["Adrodoc <adrodoc55@googlemail.com>", "skess42 <skagaros@gmail.com>"]
description = "A library that allows a Rust program to connect to a running Minecraft instance without requiring any Minecraft mods"
edition = "2021"
exclude = ["tests"]
keywords = ["minecraft", "vanilla"]
license = "GPL-3.0-or-later"
name = "minect"
repository = "https://github.com/vanilla-technologies/minect"
version = "0.1.2"

[lib]
name = "minect"

[dependencies]
encoding_rs = "0.8"
fs3 = "0.5"
futures = "0.3"
hematite-nbt = "0.5"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
notify = "6"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
walkdir = "2"

[dev-dependencies]
serial_test = "2"
simple_logger = "4"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }

[build-dependencies]
walkdir = "2"
